...
    <string name="you_can_submit_feedback_again_in">"You can submit feedback again in "</string>
    <string name="feedback_submitted">Feedback Submitted</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback!</string>
    <string name="ok">OK</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="are_you_sure_you_want_to_go_back">Are you sure you want to go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_fragment">current_fragment</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="logged_out_successfully">Logged Out Successfully</string>
    <string name="confirm_logout">Confirm LogOut?</string>
    <string name="notificationsKey">notification enabled</string>
    <string name="notifications_enabled">notification enabled</string>
    <string name="notifications_disabled">notification disabled</string>
    <string name="permission_denied">permission Denied</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
...
