<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedback_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
...
